bmi form commented

--- a/index1.html
+++ b/index1.html
@@ -268,7 +268,7 @@
             </form>
         </div>
         <p class="invite">Zapraszam serdecznie!</p>
-        <form class="jsForm">
+        <!-- <form class="jsForm">
             <fieldset class="jsForm__body">
                 <legend class="jsForm__legend">Oblicz swoje BMI</legend>
                 <p>
@@ -291,7 +291,7 @@
             <p>
                 <button class="clearButton" type="reset">Jeszcze raz</button>
             </p>
-        </form>
+        </form> -->
         <section class="aboutMe">
             <h2 id=aboutMe>O mnie</h2>
             <p class="aboutMe__note">Dzięki splotowi życiowych
