--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sesja noworodkowa</title>
+    <meta name="description" content="Sesja noworodkowa Warszawa • Studio • blanic •">
     <link rel="icon" href="images/favicon_blanic.jpg">
     <meta property="og:image" content="images/blanic okladka.png">
     <link rel="icon" href="'icon.png">
@@ -16,7 +17,6 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/tableList.css" rel="stylesheet">
     <link href="css/backgroundImage.css" rel="stylesheet">
-    <script defer src="js/currency-converter.js "></script>
     <script defer src="js/script.js "></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
