--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Sesja noworodkowa</title>
     <meta name="description" content="Sesja noworodkowa Warszawa • Studio • blanic •">
     <link rel="icon" href="images/favicon_blanic.jpg">
-    <meta property="og:image" content="images/blanic okladka.png">
+    <meta property="og:image" content="images/blanicokladka.png">
     <link rel="icon" href="'icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -110,8 +110,8 @@
                     href="http://blanic.pl">Zajrzyj do galerii
                     pełnej
                     inspiracji!
-                    <img class="banner__image" width="1842" src="https://i.postimg.cc/76fPzmW2/banner-blanic6.png"
-                        alt="sesja-noworodkowa" title="Fotografia noworodkowa blanic.pl"></a>
+                    <img class="banner__image" width="1842" src="images/banner-blanic6.png" alt="sesja-noworodkowa"
+                        title="Fotografia noworodkowa blanic.pl"></a>
             </p>
             <h3 class="how" id="offer">Oferta</h3>
             <div class="list">
