--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sesja noworodkowa</title>
-    <meta name="description" content="Sesja noworodkowa Warszawa • Studio • blanic •">
+    <meta name="description" content="Sesja noworodkowa Warszawa • Studio • blanic.pl •">
     <link rel="icon" href="images/favicon_blanic.jpg">
     <meta property="og:image" content="../images/blanicokladka.png">
     <link rel="icon" href="'icon.png">
