--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Sesja noworodkowa</title>
     <meta name="description" content="Sesja noworodkowa Warszawa • Studio • blanic.pl •">
     <link rel="icon" href="images/favicon_blanic.jpg">
-    <meta property="og:image" content="mages/blanicokladka.png">
+    <meta property="og:image" content="images/blanicokladka.png">
     <link rel="icon" href="'icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
