--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sesja noworodkowa</title>
-    <meta name="description" content="Sesja noworodkowa Warszawa • Studio • blanic.pl •">
     <link rel="icon" href="images/favicon_blanic.jpg">
     <meta property="og:image" content="images/blanicokladka.png">
-    <link rel="icon" href="'icon.png">
+    <meta property=”og:title” content="Sesja noworodkowa">
+    <meta name="description" content="Sesja noworodkowa Warszawa • Studio • blanic.pl •">
+    <meta property=”og:type” content=”website”>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
