--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sesja noworodkowa</title>
     <link rel="icon" href="images/favicon_blanic.jpg">
-    <meta property="og:image" content="images/blanicokladka.png">
+    <meta property="og:image" content="https://blnic.github.io/mypage/images/my-first-page.png">
     <meta property=”og:title” content="Sesja noworodkowa">
     <meta name="description" content="Sesja noworodkowa Warszawa • Studio • blanic.pl •">
     <meta property=”og:type” content=”website”>
