Flex pic paragraph order

--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
                 </ul>
             </div>
         </nav>
-        <img class="headerPic" width="600" src="https://i.postimg.cc/6QyZCfP5/Fotograf-noworodkowy.jpg"
+        <img class="header__pic" width="600" src="https://i.postimg.cc/6QyZCfP5/Fotograf-noworodkowy.jpg"
             alt="sesja-noworodkowa" title="Fotografia noworodkowa blanic.pl">
         <main>
-            <p class="paragraph">Sesja noworodkowa jest wyjątkową pamiątką z piewrszych dni życia Twojego dziecka, kiedy
+            <p class="paragraph" class="paragraph__intro">Sesja noworodkowa jest wyjątkową pamiątką z piewrszych dni
+                życia Twojego dziecka, kiedy
                 zwinięte w
                 kuleczkę
                 maleństwo mieści się w dłoniach niemal w całości. Moment, kiedy Twój Największy Skarb jest
